--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,17 +1,13 @@
 <h3>User Registration</h3>
 <form [formGroup]="registerForm" (ngSubmit)="onFormSubmit()">
   <div class="form-group">
-    <label for="firstName">First Name</label>
-        <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.firstName.errors }" placeholder="Enter First Name here"/>
+    <label for="firstName">Company Name</label>
+        <input type="text" formControlName="companyName" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.firstName.errors }" placeholder="Enter Company Name here"/>
         <div *ngIf="submitted && fval.firstName.errors" class="invalid-feedback">
-            <div *ngIf="fval.firstName.errors.required">First Name is required</div>
+            <div *ngIf="fval.firstName.errors.required">Company Name is required</div>
         </div>
   </div>
 
-  <div class="form-group">
-    <label for="lastName">Last Name</label>
-        <input type="text" formControlName="lastName" class="form-control" placeholder="Enter Last Name here"/>
-  </div>
   <div class="form-group">
     <label for="email">Email</label>
     <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.email.errors }" placeholder="Enter email here"/>
@@ -35,7 +31,7 @@
         <div *ngIf="fval.password.errors.required">Password is required</div>
         <div *ngIf="fval.password.errors.minlength">Password must be at least 6 characters</div>
     </div>
-    
+
   </div>
 
   <div class="form-group">
