--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,10 +1,11 @@
 <h3>User Registration</h3>
 <form [formGroup]="registerForm" (ngSubmit)="onFormSubmit()">
   <div class="form-group">
-    <label for="firstName">Company Name</label>
-        <input type="text" formControlName="companyName" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.firstName.errors }" placeholder="Enter Company Name here"/>
-        <div *ngIf="submitted && fval.firstName.errors" class="invalid-feedback">
-            <div *ngIf="fval.firstName.errors.required">Company Name is required</div>
+    <label for="name">Company Name</label>
+        <input type="text" formControlName="companyName" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.companyName.errors }" placeholder="Enter Company Name here"/>
+        <div *ngIf="submitted && fval.companyName.errors" class="invalid-feedback">
+            <div *ngIf="fval.companyName.errors.required">Company Name is required</div>
+            <div *ngIf="fval.companyName.errors.minlength">Company Name must be at least 6 characters</div>
         </div>
   </div>
 
@@ -17,15 +18,16 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="email">Phone</label>
+    <label for="phone">Phone</label>
     <input type="text" formControlName="phone" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.phone.errors }" placeholder="Enter Phone here"/>
     <div *ngIf="submitted && fval.phone.errors" class="invalid-feedback">
         <div *ngIf="fval.phone.errors.required">Phone is required</div>
+        <div *ngIf="fval.phone.errors.minlength">Phone must be at least 6 characters</div>
     </div>
   </div>
 
   <div class="form-group">
-    <label for="email">Password</label>
+    <label for="password">Password</label>
     <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }" placeholder="Enter Password here"/>
     <div *ngIf="submitted && fval.password.errors" class="invalid-feedback">
         <div *ngIf="fval.password.errors.required">Password is required</div>
