--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 
 <!-- main app container -->
 <div class="jumbotron">
-  <a *ngIf="currentUser" class="nav-item nav-link" style="cursor:pointer" (click)="logout()">Logout</a>
+  <button mat-raised-button *ngIf="currentUser" color="primary"  (click)="logout()">Logout</button>
+
   <div class="container">
     <div class="row">
       <div class="col-md-4 offset-md-4">
