--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -3,7 +3,7 @@
 <!-- <button mat-raised-button *ngIf="currentUser" color="primary"  (click)="logout()">Logout</button> -->
 <h3>Name Of Your Company</h3>
 <p>{{currentUser.companyName}} </p>
-<h3>Yoyr Email</h3>
+<h3>Your Email</h3>
 <p>{{currentUser.email}} </p>
 <h4>Info about your order</h4>
 <h6>Km: </h6>
@@ -16,7 +16,20 @@
 <p>{{currentUser.numb_cars}} </p>
 <h6>Start: </h6>
 <p>{{currentUser.data_start}} </p>
-<button mat-raised-button  (click)="statistick()" [disabled]="loading" color="primary">
-    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-    Statistick
-</button>
+
+<div class="row">
+  <div class="col-md-6">
+    <button mat-raised-button  (click)="home()" [disabled]="loading" color="primary">
+      <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+      Input data
+    </button>
+  </div>
+    <div class="col-md-6">
+      <button mat-raised-button  (click)="statistick()" [disabled]="loading" color="primary">
+        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+        Statistick
+      </button>
+    </div>
+  </div>
+
+
