--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,16 @@
-
+<mat-toolbar><h1>Drivvy</h1>
+  <div class="col-md-1 offset-md-9">
+    <button class="button-custom" mat-raised-button *ngIf="currentUser" color="primary"  (click)="logout()">Logout</button>
+  </div>
+</mat-toolbar>
 <!-- main app container -->
-<div class="jumbotron">
-  <button mat-raised-button *ngIf="currentUser" color="primary"  (click)="logout()">Logout</button>
-
+<div class="jumbotron" >
   <div class="container">
     <div class="row">
-      <div class="col-md-4 offset-md-4">
+<!--      <div class ="col-md-12">-->
+<!--        -->
+<!--      </div>-->
+      <div class="col-md-12">
         <router-outlet></router-outlet>
       </div>
     </div>
