--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,40 @@
-<mat-toolbar><h1>Drivvy</h1>
-  <div class="col-md-1 offset-md-9">
-    <button class="button-custom" mat-raised-button *ngIf="currentUser" color="primary"  (click)="logout()">Logout</button>
-  </div>
+<mat-toolbar>
+<!-- <button mat-button class="button-sideBar" ><mat-icon>reorder</mat-icon></button>-->
+  <button class="button-sideBar" mat-mini-fab  aria-label="Example icon button with a menu icon" (click)="sidebarOpen()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <h1>Drivvy</h1>
+
 </mat-toolbar>
 <!-- main app container -->
-<div class="jumbotron" >
-  <div class="container">
-    <div class="row">
-<!--      <div class ="col-md-12">-->
-<!--        -->
-<!--      </div>-->
-      <div class="col-md-12">
-        <router-outlet></router-outlet>
-      </div>
+<mat-drawer-container class="side-navbar-all">
+  <mat-drawer mode="side" [opened]="openSideBar" class="side-navbar">
+    <div class="list-sideBar">
+      <mat-nav-list>
+        <a routerLink="/account" mat-list-item ><span mat-line>Account</span></a>
+        <a routerLink="/districts" mat-list-item ><span mat-line>District</span></a>
+        <a routerLink="/analytics" mat-list-item ><span mat-line>Analytics</span></a>
+        <a routerLink="/documents" mat-list-item ><span mat-line>Documents</span></a>
+        <a href="" mat-list-item ><span mat-line>Location</span></a>
+        <button style="margin-bottom: 15px;" class="button-custom" mat-raised-button *ngIf="currentUser"  (click)="logout()"><mat-icon>exit_to_app</mat-icon></button>
+        <mat-divider></mat-divider>
+      </mat-nav-list>
     </div>
-  </div>
-</div>
+
+  </mat-drawer>
+  <mat-drawer-content>
+
+      <div class="container">
+        <div class="row">
+          <!--      <div class ="col-md-12">-->
+          <!--        -->
+          <!--      </div>-->
+          <div class="col-md-12">
+            <router-outlet></router-outlet>
+          </div>
+        </div>
+      </div>
+
+  </mat-drawer-content>
+</mat-drawer-container>
+
