--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -45,3 +45,10 @@ tr.example-element-row:not(.example-expanded-row):active {
 .example-element-description-attribution {
   opacity: 0.5;
 }
+.account-style{
+  padding: 20px;
+}
+ul h5 {
+  margin-top: 20px;
+
+}
