--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,49 +1,52 @@
 <h1>Hi {{currentUser.companyName}}!</h1>
 <p>Welcome to home page!!</p>
+<p>Please input data for your campaign</p>
 <!-- <button mat-raised-button *ngIf="currentUser" color="primary"  (click)="logout()">Logout</button> -->
+<div class="home-main col-md-6 offset-md-3">
+  <form class="firststep_adv" [formGroup]="first_adv_form" (ngSubmit)="onFormSubmit()">
+    <mat-form-field>
+      <input matInput placeholder="km"  formControlName="km">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Numb of cars"  formControlName="numb_cars">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Cars</mat-label>
+      <mat-select [(value)]="selected" matInput formControlName="car">
+        <mat-option value="volvo">Volvo</mat-option>
+        <mat-option value="saab">Saab</mat-option>
+        <mat-option value="mercedes">Mercedes</mat-option>
+        <mat-option value="audi">Audi</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <p>You selected: {{selected}}</p>
 
-<form class="firststep_adv" [formGroup]="first_adv_form" (ngSubmit)="onFormSubmit()">
-  <mat-form-field>
-    <input matInput placeholder="km"  formControlName="km">
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput placeholder="Numb of cars"  formControlName="numb_cars">
-  </mat-form-field>
-  <mat-form-field>
-  <mat-label>Cars</mat-label>
-  <mat-select [(value)]="selected" matInput formControlName="car">
-    <mat-option value="volvo">Volvo</mat-option>
-    <mat-option value="saab">Saab</mat-option>
-    <mat-option value="mercedes">Mercedes</mat-option>
-    <mat-option value="audi">Audi</mat-option>
-  </mat-select>
-</mat-form-field>
-<p>You selected: {{selected}}</p>
+    <mat-form-field>
+      <mat-select placeholder="Select" matInput formControlName="type_car">
+        <mat-option value="Low">Low</mat-option>
+        <mat-option value="Standart">Standart</mat-option>
+        <mat-option value="Max">Max</mat-option>
+      </mat-select>
+    </mat-form-field>
 
-  <mat-form-field>
-    <mat-select placeholder="Select" matInput formControlName="type_car">
-      <mat-option value="Low">Low</mat-option>
-      <mat-option value="Standart">Standart</mat-option>
-      <mat-option value="Max">Max</mat-option>
-    </mat-select>
-  </mat-form-field>
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker" matInput placeholder="Choose_date" formControlName="data_start" >
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-select placeholder="Period of exebition" matInput formControlName="periodOfExcebition">
+        <mat-option value=1>1</mat-option>
+        <mat-option value=2>2</mat-option>
+        <mat-option value=3>3</mat-option>
+        <mat-option value=4>4</mat-option>
+        <mat-option value=5>5</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-raised-button [disabled]="loading" color="primary">
+      <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+      Verified
+    </button>
+  </form>
+</div>
 
-<mat-form-field>
-  <input matInput [matDatepicker]="picker" matInput placeholder="Choose_date" formControlName="data_start" >
-  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
-</mat-form-field>
-<mat-form-field>
-  <mat-select placeholder="Period of exebition" matInput formControlName="periodOfExcebition">
-    <mat-option value=1>1</mat-option>
-    <mat-option value=2>2</mat-option>
-    <mat-option value=3>3</mat-option>
-    <mat-option value=4>4</mat-option>
-    <mat-option value=5>5</mat-option>
-  </mat-select>
-</mat-form-field>
-<button mat-raised-button [disabled]="loading" color="primary">
-    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-    Verified
-</button>
-</form>
