--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,28 @@
-<h3>User Login</h3>
-<form [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
+<h3 style="margin-top: 50px">Sign in</h3>
+<div class="login-main col-md-6 offset-md-3">
+  <form [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
     <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.email.errors }" placeholder="Enter email here"/>
-        <div *ngIf="submitted && fval.email.errors" class="invalid-feedback">
-            <div *ngIf="fval.email.errors.required">Email is required</div>
-            <div *ngIf="fval.email.errors.email">Enter valid email address</div>
-        </div>
+      <label for="email">Email</label>
+      <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.email.errors }" placeholder="Enter email here"/>
+      <div *ngIf="submitted && fval.email.errors" class="invalid-feedback">
+        <div *ngIf="fval.email.errors.required">Email is required</div>
+        <div *ngIf="fval.email.errors.email">Enter valid email address</div>
+      </div>
     </div>
     <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }" placeholder="Enter password here" />
-        <div *ngIf="submitted && fval.password.errors" class="invalid-feedback">
-            <div *ngIf="fval.password.errors.required">Password is required</div>
-        </div>
+      <label for="password">Password</label>
+      <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }" placeholder="Enter password here" />
+      <div *ngIf="submitted && fval.password.errors" class="invalid-feedback">
+        <div *ngIf="fval.password.errors.required">Password is required</div>
+      </div>
     </div>
     <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Login
-        </button>
-        <a routerLink="/register" class="btn btn-link">Register</a>
+      <button [disabled]="loading" class="btn btn-primary">
+        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+        Login
+      </button>
+      <a routerLink="/register" class="btn btn-link">Register</a>
     </div>
-</form>
+  </form>
+</div>
+
