--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,46 +1,49 @@
-<h3>User Registration</h3>
-<form [formGroup]="registerForm" (ngSubmit)="onFormSubmit()">
-  <div class="form-group">
-    <label for="name">Company Name</label>
-        <input type="text" formControlName="companyName" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.companyName.errors }" placeholder="Enter Company Name here"/>
-        <div *ngIf="submitted && fval.companyName.errors" class="invalid-feedback">
-            <div *ngIf="fval.companyName.errors.required">Company Name is required</div>
-            <div *ngIf="fval.companyName.errors.minlength">Company Name must be at least 6 characters</div>
-        </div>
-  </div>
+<h3 style="margin-top: 50px;">Sign up</h3>
+<div class="main-registration col-md-6 offset-md-3">
+  <form [formGroup]="registerForm" (ngSubmit)="onFormSubmit()">
+    <div class="form-group">
+      <label for="name">Company Name</label>
+      <input type="text" formControlName="companyName" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.companyName.errors }" placeholder="Enter Company Name here"/>
+      <div *ngIf="submitted && fval.companyName.errors" class="invalid-feedback">
+        <div *ngIf="fval.companyName.errors.required">Company Name is required</div>
+        <div *ngIf="fval.companyName.errors.minlength">Company Name must be at least 6 characters</div>
+      </div>
+    </div>
 
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.email.errors }" placeholder="Enter email here"/>
-    <div *ngIf="submitted && fval.email.errors" class="invalid-feedback">
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.email.errors }" placeholder="Enter email here"/>
+      <div *ngIf="submitted && fval.email.errors" class="invalid-feedback">
         <div *ngIf="fval.email.errors.required">Email is required</div>
         <div *ngIf="fval.email.errors.email">Enter valid email address</div>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="phone">Phone</label>
-    <input type="text" formControlName="phone" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.phone.errors }" placeholder="Enter Phone here"/>
-    <div *ngIf="submitted && fval.phone.errors" class="invalid-feedback">
+    <div class="form-group">
+      <label for="phone">Phone</label>
+      <input type="text" formControlName="phone" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.phone.errors }" placeholder="Enter Phone here"/>
+      <div *ngIf="submitted && fval.phone.errors" class="invalid-feedback">
         <div *ngIf="fval.phone.errors.required">Phone is required</div>
         <div *ngIf="fval.phone.errors.minlength">Phone must be at least 6 characters</div>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }" placeholder="Enter Password here"/>
-    <div *ngIf="submitted && fval.password.errors" class="invalid-feedback">
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && fval.password.errors }" placeholder="Enter Password here"/>
+      <div *ngIf="submitted && fval.password.errors" class="invalid-feedback">
         <div *ngIf="fval.password.errors.required">Password is required</div>
         <div *ngIf="fval.password.errors.minlength">Password must be at least 6 characters</div>
+      </div>
+
     </div>
 
-  </div>
-
-  <div class="form-group">
-    <button [disabled]="loading" class="btn btn-primary">
+    <div class="form-group">
+      <button [disabled]="loading" class="btn btn-primary">
         <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
         Register
-    </button>
-    <a routerLink="/login" class="btn btn-link">Login to continue</a>
+      </button>
+      <a routerLink="/login" class="btn btn-link">Login to continue</a>
+    </div>
+  </form>
+
 </div>
-</form>
